Refined Sd Type creation, added config and launcher